Updated static files

--- a/edfc727ee0c97a9eed757768a6f16ead.css
+++ b/edfc727ee0c97a9eed757768a6f16ead.css
@@ -1,2 +1,1 @@
-body {
-  background-color: red; }
+body{margin:0;padding:0;background-color:#e9cee0;font-family:Helvetica Neue,sans-serif;font-size:18px;text-align:center;color:#000}img{max-width:100%}h1{font-size:32px;color:#ff1493}
